--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
     "daisyui": "^4.10.2",
     "eslint-config-prettier": "^9.1.0",
+    "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
